# pykemo

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: linter.yml  tests.yml  wheels.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
pykemo/: __main__.py
pykemo/main/: __init__.py  main.py
pykemo/main/announcements/: announcements.py
pykemo/main/checks/: __init__.py  services_checks.py
pykemo/main/comments/: __init__.py  comments_rev.py
pykemo/main/core/: __init__.py  urltypes.py
pykemo/main/creators/: creators.py
pykemo/main/discord/: __init__.py  channels.py  messages.py  users.py
pykemo/main/exceptions/: __init__.py
pykemo/main/fancards/: __init__.py
pykemo/main/files/: files.py
pykemo/main/general/: __init__.py  _aux_class.py  _aux_func.py  _general_func.py
pykemo/main/posts/: post_revisions.py  posts.py
pykemo/main/services/: services_enum.py
src/main/: __init__.py  main.py
src/main/core/: __init__.py  _request_types.py  request.py
src/main/creators/: __init__.py  creators.py
src/main/files/: files.py
src/main/general/: __init__.py  _aux_func.py
src/main/posts/: __init__.py  posts.py
src/main/services/: services_enum.py
src/pykemo/: __init__.py  __main__.py  main.py
src/pykemo/_aux/: __init__.py  aux_classes.py  aux_funcs.py
src/pykemo/announcements/: __init__.py  announcements.py
src/pykemo/checks/: services_checks.py
src/pykemo/comments/: comments.py  comments_rev.py
src/pykemo/core/: request.py  urltypes.py
(+24 files in other folders)
