[project]
name = "pykemo"
authors = [
    {name = "ssilentOne"}
]
maintainers = [
    {name = "ssilentOne"}
]
description = "A python binding to the Kemono API."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]
dynamic = ["version"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "pykemo.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pykemo*"]
exclude = ["tests*"]